# flx

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml
crates/daemon/: Cargo.toml
crates/devtools/: Cargo.toml
crates/devtools/examples/receive_extension_event/: main.rs
crates/devtools/src/: flutter_extension.rs  io_extension.rs  lib.rs  protocols.rs  service.rs  util.rs  vm_service.rs
crates/devtools/src/io/: request.rs  response.rs
crates/devtools/src/protocols/: flutter_extension.rs  io_extension.rs  vm_service.rs
crates/devtools/test/: get_http_profile_response.txt  get_http_profile_response_2.txt  get_root_widget_response.txt
crates/vscode/: Cargo.toml
crates/vscode/src/: launch.rs
crates/vscode/src/test/: launch_1.json
libs/android/: Cargo.toml
libs/ios/: Cargo.toml
src/: action.rs  android.rs  app.rs  cli.rs  components.rs  config.rs  daemon.rs  devtools.rs  ios.rs  main.rs  redux.rs  session.rs  tui.rs  utils.rs
src/android/: test.rs
src/components/: app.rs  device.rs  devices.rs  fps.rs  frame_analysis.rs  frames.rs  home.rs  inspector.rs  launch_configurations.rs  logs.rs  network.rs  network_request.rs  performance.rs  project.rs  pubspec.rs  runners.rs  sdk_version.rs  select_device_popup.rs  select_flavor_popup.rs  select_launch_configuration_popup.rs  select_tab_handler.rs  widget_details.rs
src/daemon/: flutter.rs  io.rs  run.rs
src/devtools/: io.rs  service.rs
src/ios/: test.rs
src/redux/: action.rs  reducer.rs  selector.rs  state.rs  thunk.rs
src/session/: session.rs  session_manager.rs
(+55 files in other folders)
