[package]
name = "vscode"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.195", features = ["derive"] }
serde_json = { version = "1.0.111" }
tokio = { version = "1.32.0", features = ["full"] }
color-eyre = "0.6.2"
log = "0.4.20"
futures = "0.3.28"
serde_stacker = "0.1.11"
uuid = "1.8.0"
json_comments = "0.2.2"
json5 = "0.4.1"

[dev-dependencies]
clap = { version = "4.5.2", features = ["derive"] }
